@@ -8,13 +8,17 @@ permalink: running_tomcat.html
 
 ## Starting & stopping Tomcat
 
+{%include note.html content="
+This section assumes you have successfully installed the JDK and Tomcat Servlet Container as outlined in the <a href=\"install_java_tomcat.html\" target=\"_blank\">Installation of Java and Tomcat</a> section.
+" %}
+
 1. Tomcat isn’t currently running so we need to start it up.
 
    Run the startup.sh script in the Tomcat bin/ directory:
 
    ~~~ bash
    $ pwd
-   /usr/local/tds/apache-tomcat-8.0.24
+   /usr/local/tds/tomcat
 
    $ bin/startup.sh
    ~~~
@@ -25,11 +29,11 @@ permalink: running_tomcat.html
 
    ~~~bash
    $ ps -ef | grep tomcat
-   tds      21912     1 29 09:39 pts/1    00:00:02 /usr/bin/java -Djava.util.logging.config.file=/usr/local/tds/apache-tomcat-8.0.24/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djava.endorsed.dirs=/usr/local/tds/apache-tomcat-8.0.24/endorsed -classpath /usr/local/tds/apache-tomcat-8.0.24/bin/bootstrap.jar:/usr/local/tds/apache-tomcat-8.0.24/bin/tomcat-juli.jar -Dcatalina.base=/usr/local/tds/apache-tomcat-8.0.24 -Dcatalina.home=/usr/local/tds/apache-tomcat-8.0.24 -Djava.io.tmpdir=/usr/local/tds/apache-tomcat-8.0.24/temp org.apache.catalina.startup.Bootstrap start
-   tds      21933 21675  0 09:39 pts/1    00:00:00 grep tomcat
+   oxelson   4293     1 99 14:04 pts/2    00:00:06 /opt/jdk/bin/java -Djava.util.logging.config.file=/usr/local/tds/tomcat/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djdk.tls.ephemeralDHKeySize=2048 -Djava.protocol.handler.pkgs=org.apache.catalina.webresources -Dorg.apache.catalina.security.SecurityListener.UMASK=0027 -Dignore.endorsed.dirs= -classpath /usr/local/tds/tomcat/bin/bootstrap.jar:/usr/local/tds/tomcat/bin/tomcat-juli.jar -Dcatalina.base=/usr/local/tds/tomcat -Dcatalina.home=/usr/local/tds/tomcat -Djava.io.tmpdir=/usr/local/tds/tomcat/temp org.apache.catalina.startup.Bootstrap start
+   oxelson   4366 23720  0 14:04 pts/2    00:00:00 grep tomcat
    ~~~
 
-   Open a new browser window/tab and go to http://localhost:8080/ to verify Tomcat is running:
+   Open a new browser window/tab and go to [http://localhost:8080/](http://localhost:8080/){:target="_blank"} to verify Tomcat is running:
 
    {% include image.html file="tds/tutorial/getting_started/congratulations.png" alt="Tomcat Default Home Page" caption="If you see this page, Tomcat is running!" %}
 
@@ -49,13 +53,13 @@ Which Java is Tomcat currently using? (Hint: what was sent to `STDOUT` when runn
 
 {% include troubleshooting.html content="
 Check the logs mostly recently generated in the Tomcat logs for clues about why Tomcat failed to start or stop.
-Pay particular attention to what is being reported in Tomcat’s main log file: catalina.out.
+Pay particular attention to what is being reported in Tomcat's main log file: `catalina.out`.
 " %}
 
 ## Setting `$JAVA_HOME`, `$JAVA_OPTS`, `$CATALINA_BASE`, and `$CONTENT_ROOT`
 
 {% include troubleshooting.html content="
-If you’re running Tomcat on an instance of Windows OS, you will want to create a setenv.bat file.
+If you’re running Tomcat on an instance of Windows OS, you will want to create a `setenv.bat` file.
 " %}
 
 We are going to create a file called `setenv.sh` in the Tomcat `bin/` directory to:
@@ -72,7 +76,7 @@ We are going to create a file called `setenv.sh` in the Tomcat `bin/` directory 
 
    ~~~bash
    $ pwd
-   /usr/local/tds/apache-tomcat-8.0.24
+   /usr/local/tds/tomcat
 
    $ cd bin
    $ vi setenv.sh
@@ -82,11 +86,11 @@ We are going to create a file called `setenv.sh` in the Tomcat `bin/` directory 
    #
    # ENVARS for Tomcat
    #
-   export CATALINA_HOME="/usr/local/tomcat"
+   export CATALINA_HOME="/usr/local/tds/tomcat"
 
-   export CATALINA_BASE="/usr/local/tomcat"
+   export CATALINA_BASE="/usr/local/tds/tomcat"
 
-   export JAVA_HOME="/usr"
+   export JAVA_HOME="/usr/local/tds/jdk"
 
    # TDS specific ENVARS
    #
@@ -94,7 +98,7 @@ We are going to create a file called `setenv.sh` in the Tomcat `bin/` directory 
    #   THIS IS CRITICAL and there is NO DEFAULT - the
    #   TDS will not start without this.
    #
-   CONTENT_ROOT=-Dtds.content.root.path=/usr/local/tomcat/content
+   CONTENT_ROOT=-Dtds.content.root.path=/usr/local/tds/tomcat/content
 
    # set java prefs related variables (used by the wms service, for example)
    JAVA_PREFS_ROOTS="-Djava.util.prefs.systemRoot=$CATALINA_HOME/content/thredds/javaUtilPrefs \
@@ -110,7 +114,7 @@ We are going to create a file called `setenv.sh` in the Tomcat `bin/` directory 
    #
    # Standard setup.
    #
-   JAVA_OPTS="$CONTENT_ROOT $NORMAL $MAX_PERM_GEN $HEAP_DUMP $HEADLESS $JAVA_PREFS_ROOTS"
+   JAVA_OPTS="$CONTENT_ROOT $NORMAL $HEAP_DUMP $HEADLESS $JAVA_PREFS_ROOTS"
 
    export JAVA_OPTS
    ~~~
@@ -124,10 +128,15 @@ We are going to create a file called `setenv.sh` in the Tomcat `bin/` directory 
     * `CONTENT_ROOT` is TDS specific, and definds the location of where TDS related configuration files will be stored.
     * `-Xms` is the initial and minimum allocated memory of the JVM (for performance).
     * `-Xmx` the maximum allocated memory of the JVM (for performance).
-    * `-server` tells the Hostspot compiler to run the JVM in "server" mode (for performance).
+    * `-server` tells the Hotspot compiler to run the JVM in "server" mode (for performance).
     * `-Djava.awt.headless=true` is needed to prevent graphics rendering code from assuming a graphics console exists.
       Without this, WMS code will crash the server in some circumstances.
     * `-Djava.util.prefs.systemRoot=$CATALINA_BASE/content/thredds/javaUtilPrefs` allows the java.util.prefs of the TDS WMS to write system preferences to a location that is writable by the Tomcat user.
+
+{%include note.html content="
+For more information about the possible options/arguments available for `$JAVA_OPTS`, please consult the <a href=\"https://docs.oracle.com/javase/8/docs/technotes/tools/unix/java.html#BABDJJFI\" target=\"_blank\">Oracle Documentation</a>.
+" %}
+
 
 2. Implement your changes by restarting Tomcat.
 
@@ -135,11 +144,12 @@ We are going to create a file called `setenv.sh` in the Tomcat `bin/` directory 
 
    ~~~bash
    $ ./startup.sh
-   Using CATALINA_BASE:   /usr/local/tds/apache-tomcat-8.0.24
-   Using CATALINA_HOME:   /usr/local/tds/apache-tomcat-8.0.24
-   Using CATALINA_TMPDIR: /usr/local/tds/apache-tomcat-8.0.24/temp
-   Using JRE_HOME: /usr/local/tds/jdk1.8u51
-   Using CLASSPATH:       /usr/local/tds/apache-tomcat-8.0.24/bin/bootstrap.jar:/usr/local/tds/apache-tomcat-8.0.24/bin/tomcat-juli.jar
+    Using CATALINA_BASE:   /usr/local/tds/tomcat
+    Using CATALINA_HOME:   /usr/local/tds/tomcat
+    Using CATALINA_TMPDIR: /usr/local/tds/tomcat/temp
+    Using JRE_HOME:        /usr/local/tds/jdk
+    Using CLASSPATH:       /usr/local/tds/tomcat/bin/bootstrap.jar:/usr/local/tds/tomcat/bin/tomcat-juli.jar
+    Tomcat started.
    ~~~
 
    {% include question.html content="
@@ -150,17 +160,16 @@ We are going to create a file called `setenv.sh` in the Tomcat `bin/` directory 
 
    ~~~bash
    $ ps -ef | grep tomcat
-   tds      22007     1  9 09:44 pts/1    00:00:02 /usr/local/tds/jdk1.8u51/bin/java -Djava.util.logging.config.file=/usr/local/tds/apache-tomcat-8.0.24/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Xmx4096m
-  -Xms512m -server -Djava.awt.headless=true -Djava.util.prefs.systemRoot=/usr/local/tds/apache-tomcat-8.0.24/content/thredds/javaUtilPrefs -Djava.endorsed.dirs=/usr/local/tds/apache-tomcat-8.0.24/endorsed -classpath /usr/local/tds/apache-tomcat-8.0.24/bin/bootstrap.jar:/usr/local/tds/apache-tomcat-8.0.24/bin/tomcat-juli.jar -Dcatalina.base=/usr/local/tds/apache-tomcat-8.0.24 -Dcatalina.home=/usr/local/tds/apache-tomcat-8.0.24 -Djava.io.tmpdir=/usr/local/tds/apache-tomcat-8.0.24/temp org.apache.catalina.startup.Bootstrap start
-   tds      22030 21675  0 09:44 pts/1    00:00:00 grep tomcat
+   oxelson   7988     1 13 14:17 pts/2    00:00:05 /usr/local/tds/jdk/bin/java -Djava.util.logging.config.file=/usr/local/tds/tomcat/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Dtds.content.root.path=/usr/local/tds/tomcat/content -d64 -Xmx4096m -Xms512m -server -ea -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true -Djava.util.prefs.systemRoot=/usr/local/tds/tomcat/content/thredds/javaUtilPrefs -Djava.util.prefs.userRoot=/usr/local/tds/tomcat/content/thredds/javaUtilPrefs -Djdk.tls.ephemeralDHKeySize=2048 -Djava.protocol.handler.pkgs=org.apache.catalina.webresources -Dorg.apache.catalina.security.SecurityListener.UMASK=0027 -Dignore.endorsed.dirs= -classpath /usr/local/tds/tomcat/bin/bootstrap.jar:/usr/local/tds/tomcat/bin/tomcat-juli.jar -Dcatalina.base=/usr/local/tds/tomcat -Dcatalina.home=/usr/local/tds/tomcat -Djava.io.tmpdir=/usr/local/tds/tomcat/temp org.apache.catalina.startup.Bootstrap start
+   oxelson   8279 23720  0 14:18 pts/2    00:00:00 grep tomcat
    ~~~
 
    {% include note.html content="
-   For more information on the environment variable prerequisites used by Tomcat, consult ${tomcat_home}/bin/catalina.sh (or catalina.bat) file."
+   For more information on the environment variable prerequisites used by Tomcat, consult `${tomcat_home}/bin/catalina.sh (or catalina.bat)` file."
    %}
 
    {% include question.html content="
-   What allows us to create the setenv.sh file and have its contents read? (Hint: have a look at the catalina.sh file in the Tomcat bin/ directory).
+   What allows us to create the setenv.sh file and have its contents read? (Hint: have a look at the `catalina.sh` file in the Tomcat `bin/` directory).
    " %}
 
 
@@ -188,19 +197,10 @@ We are going to create a file called `setenv.sh` in the Tomcat `bin/` directory 
    WARNING: Couldn't flush system prefs: java.util.prefs.BackingStoreException: /etc/.java/.systemPrefs/org create failed.
    ~~~
 
-   You will need to set the `java.util.prefs.systemRoot` system property in `$JAVA_OPTS` to a location that is writable by the user that Tomcat, e.g.:
+   You will need confirm `java.util.prefs.systemRoot` system property is set in `$JAVA_OPTS` to a location that is writable by the user that Tomcat, e.g.:
 
    ~~~bash
-   #!/bin/sh
-   #
-   # ENVARS for Tomcat and TDS environment
-   #
-   JAVA_HOME="/usr/local/tds/jdk1.8u51"
-   export JAVA_HOME
-
-   JAVA_OPTS="-Xmx4096m -Xms512m -server -Djava.awt.headless=true -Djava.util.prefs.systemRoot=$CATALINA_BASE/content/thredds/javaUtilPrefs"
-   export JAVA_OPTS
-
-   CATALINA_BASE="/usr/local/tds/apache-tomcat-8.0.24"
-   export CATALINA_BASE
+   # set java prefs related variables (used by the wms service, for example)
+   JAVA_PREFS_ROOTS="-Djava.util.prefs.systemRoot=$CATALINA_HOME/content/thredds/javaUtilPrefs \
+                     -Djava.util.prefs.userRoot=$CATALINA_HOME/content/thredds/javaUtilPrefs"
    ~~~
